--- a/README
+++ b/README
@@ -130,3 +130,9 @@ Escape character is '^]'.
 
     {"notice":"data_exhausted","sthid":"3"}
 
+COPYRIGHT AND LICENCE
+
+Copyright (C) 2010 Joshua Thayer
+
+This program is free software; you can redistribute it and/or modify it
+under the same terms as Perl itself.
